       any problems with the older scheme, but no users are actually known to be
       using nuskew() and nustar(). ***
13. Added only.bilmoms argument to bilmoms() to skip L-comoment computation, 
       in order to speed execution.
14. Added lcomCOP() based on integrate(integrate()) nest for computation of the
       bivariate L-moments and then conversion to the L-comoments. This is much
       faster than bilmoms(). It is not remembered by the author why nested
       integration was not originally implemented for bilmoms(). (Sorry.)
       Testing indicates that lcomCOP() works well and is much much faster.
       The function lcomCOPpv() will need revisition for a future release.
15. Added "1", "2", "3", "4" argument options for reflect in simCOPmicro() and
       simCOPv() to be parallel with COP().
16. Made an editorial sweep throughout the documentation.


POTENTIAL TODOs:

samcor --> as.sample change in semicorCOP().
lcomCOPpv <--> vuongCOP  

\author{William Asquith \email{william.asquith@ttu.edu} }
  Make such conversions through out or go back to W.H. Asquith?

EMPIRcopdf() can be replaced by EMPIRcop() as the later is fully 
  vectorized itself and makes presumably a lesser impact on memory (faster)?

stabtaildepf.Rd --- Need to audit stabtaildepf.Rd and complete documentation.

EMPIRcop.Rd --- Need to audit level.curves in the Examples.

Implementation of state-of-the-practice nonparametric estimators of
  lower and upper tail dependence parameters. Neither of the three books
  cited within deal with this. A turn towards recommended literature by
  Joe (2014) is needed.

Goodness-of-fit of the Kendall Function following Genest et. al. (2006,
  Goodness-of-fit procedures for copula models based on the probability
  integral transformation: Scand J. Statist 33.

Convergence evaluators for the Monte Carlo integration in bilmoms() and
  kullCOP() to enhance computation times.

rhobevCOP() study for a copula yielding 0.
